Ouriginal vervangen door TII

--- a/A-Z/Homepage/AZ-Homepage_22-23.html
+++ b/A-Z/Homepage/AZ-Homepage_22-23.html
@@ -211,12 +211,6 @@
                                 </a>
                             </p>
 
-                            <!-- Ouriginal -->
-                            <p>
-                                <a id="" class="Button Button--large" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="Ouriginal" href="https://canvas.uva.nl/courses/8175/pages/ouriginal-homepage" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/ouriginal-homepage" data-api-returntype="Page">
-                                    <img style="margin-right: 20px;" id="4377529" src="https://canvas.uva.nl/courses/8175/files/4497519/preview" alt="ouriginal.png" width="44" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4497519" data-api-returntype="File" /><span style="color: #000000;">Ouriginal</span>
-                                </a>
-                            </p>
 
                             <!-- Perusall -->
                             <p>
@@ -252,6 +246,13 @@
                                     <img style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/4378110/preview" alt="TEELEN-Logo-RGB.png" width="43" height="43" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4378110" data-api-returntype="File" /><span style="color: #000000;">TestVision</span>
                                 </a>
                             </p>
+
+                            <!-- Turnitin Similarity -->
+                            <p>
+                                <a id="" class="Button Button--large" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="Turnitin Similarity" href="https://canvas.uva.nl/courses/169/pages/detecting-plagiarism" target="_blank" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/169/pages/detecting-plagiarism" data-api-returntype="Page">
+                                    <img style="margin-right: 20px;" id="4377529" src="https://canvas.uva.nl/courses/8175/files/8014734/preview" alt="Turnitin-logo-bg.png" width="44" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/8014734" data-api-returntype="File" /><span style="color: #000000;">Turnitin Similarity</span>
+                                </a>
+                            </p>                            
 
                             <!-- Zoom -->
                             <p>
@@ -356,10 +357,10 @@
                                 <td style="width: 56.2347%;">
                                     <div class="styleguide-section__grid-demo-element" style="vertical-align: center;">
                                         <img id="4377529" style="margin-right: 8px; margin-bottom: 7px;" src="https://canvas.uva.nl/courses/8175/files/4377529/preview" alt="canvas-logo-1024x1020-1.png" width="28" height="28" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4377529" data-api-returntype="File" />
-                                        <img style="margin-right: 8px; margin-bottom: 7px;" src="https://canvas.uva.nl/courses/8175/files/4497519/preview" alt="ouriginal.png" width="30" height="29" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4497519" data-api-returntype="File" />
+                                        <img style="margin-right: 8px; margin-bottom: 7px;" src="https://canvas.uva.nl/courses/8175/files/8014734/preview" alt="Turnitin-logo-bg.png" width="30" height="29" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/8014734" data-api-returntype="File" />
                                         <ul class="pill" style="background: #6EACD8; margin-top: 20px; margin-right: 8px;">
                                             <li>
-                                                <span style="color: #ffffff;"><strong>Ouriginal</strong></span>
+                                                <span style="color: #ffffff;"><strong>Turnitin Similarity</strong></span>
                                             </li>
                                         </ul>
                                         <ul class="pill" style="background: #858585; margin-top: 20px; margin-right: 8px;">
@@ -374,14 +375,14 @@
                                         </ul>
                                     </div>
                                     <p>
-                                        <span style="color: #5a5a5a;"> Ouriginal is the plagiarism software of the UvA. Ouriginal compares student submissions with existing texts of various different sources. The degree of similarities with other texts online, or with other student submissions, are presented with a similarity percentage. </span>
+                                        <span style="color: #5a5a5a;"> Turnitin Similarity is the plagiarism software of the UvA. It compares student submissions with existing texts of various different sources. The degree of similarities with other texts online, or with other student submissions, are presented with a similarity percentage. </span>
                                     </p>
                                 </td>
                                 <td style="width: 4.47733%;">
                                     <p><strong>&nbsp;</strong></p>
                                 </td>
                                 <td style="width: 22.3964%;">
-                                    <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/ouriginal-homepage" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/ouriginal-homepage" data-api-returntype="Page">
+                                    <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/169/pages/detecting-plagiarism" target="_blank" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/169/pages/detecting-plagiarism" data-api-returntype="Page">
                                         <span>View more</span>
                                     </a>
                                 </td>
