--- a/A-Z/Tools/Turnitin Similarity/Handout_teachers.html
+++ b/A-Z/Tools/Turnitin Similarity/Handout_teachers.html
@@ -124,7 +124,18 @@
                         </tr>
                         <tr>
                             <td style="width:10%; padding-left:15px; vertical-align:top"><p style="font-size: 12pt"><b>6.</b></p></td>
-                            <td style="width:90%"><p style="font-size: 12pt">Send an e-mail to the <a href="mailto: examencommissie-soc@uva.nl">Examination Board</a> containing [1] the link to the relevant assignment in Canvas and [2] attach the PDF report.</p></td>
+                            <td style="width:90%"><p style="font-size: 12pt">Send an e-mail to the Examinations Board containing [1] the link to the relevant assignment in Canvas and [2] attach the PDF report.</p>
+                                <p style="font-size: 10pt"><em>
+                                    ISW: <a href="mailto:examencommissie-isw@uva.nl">examencommissie-isw@uva.nl</a></br>
+                                    BCA, MCSA, MAS: <a href="mailto:examencommissie-ca@uva.nl">examencommissie-ca@uva.nl</a></br>
+                                    Bpol, Mpol, CRG: <a href="mailto:examencommissie-pol@uva.nl">examencommissie-pol@uva.nl</a></br>
+                                    BSGPL, MURP, MHG: <a href="mailto:examencommissie-SGPL@uva.nl">examencommissie-SGPL@uva.nl</a></br>
+                                    Bsoc, Msoc: <a href="mailto:examencommissie-soc@uva.nl">examencommissie-soc@uva.nl</a></br>
+                                    IDS, RMIDS, RMSS, RMUS: <a href="mailto:examen-gsss@uva.nl">examen-gsss@uva.nl</a></br>
+                                    CSSci: <a href="mailto:examinationsboard-cssci@uva.nl">examinationsboard-cssci@uva.nl</a></br>
+                                </em></p>
+                                
+                            </td>
                         </tr>
                     </table>
                 </td>
@@ -237,7 +248,17 @@
                         </tr>
                         <tr>
                             <td style="width:10%; padding-left:15px; vertical-align:top"><p style="font-size: 12pt"><b>6.</b></p></td>
-                            <td style="width:90%"><p style="font-size: 12pt">Stuur een e-mail naar de <a href="mailto: examencommissie-soc@uva.nl">Examencommissie</a> met daarin [1] de link naar de betreffende opdracht en [2] voeg het PDF-rapport als bijlage toe.</p></td>
+                            <td style="width:90%"><p style="font-size: 12pt">Stuur een e-mail naar de Examencommissie met daarin [1] de link naar de betreffende opdracht en [2] voeg het PDF-rapport als bijlage toe.</p>
+                                <p style="font-size: 10pt"><em>
+                                    ISW: <a href="mailto:examencommissie-isw@uva.nl">examencommissie-isw@uva.nl</a></br>
+                                    BCA, MCSA, MAS: <a href="mailto:examencommissie-ca@uva.nl">examencommissie-ca@uva.nl</a></br>
+                                    Bpol, Mpol, CRG: <a href="mailto:examencommissie-pol@uva.nl">examencommissie-pol@uva.nl</a></br>
+                                    BSGPL, MURP, MHG: <a href="mailto:examencommissie-SGPL@uva.nl">examencommissie-SGPL@uva.nl</a></br>
+                                    Bsoc, Msoc: <a href="mailto:examencommissie-soc@uva.nl">examencommissie-soc@uva.nl</a></br>
+                                    IDS, RMIDS, RMSS, RMUS: <a href="mailto:examen-gsss@uva.nl">examen-gsss@uva.nl</a></br>
+                                    CSSci: <a href="mailto:examinationsboard-cssci@uva.nl">examinationsboard-cssci@uva.nl</a></br>
+                                </em></p>
+                            </td>
                         </tr>
                     </table>
                 </td>
