--- a/A-Z/Tools/Turnitin Similarity/Handout_teachers.html
+++ b/A-Z/Tools/Turnitin Similarity/Handout_teachers.html
@@ -30,7 +30,7 @@
                 <h4 style="text-align: center;"><i><b>How can I see a student's plagiarism report?</b></i></h4>
                 </td>
                 <td style="width:50%; vertical-align:top;">
-                <h4 style="text-align: center;"><i><b>How do I report suspected plagiarism to the Examination Board?</b></i></h4>
+                <h4 style="text-align: center;"><i><b>How do I report suspected plagiarism to the Examinations Board?</b></i></h4>
                 </td>
             </tr>
             <tr>
