update tvo instructie

--- a/A-Z/Exams/TestVision/22-23/1_Questions+Test_22-23 CONCEPT.html
+++ b/A-Z/Exams/TestVision/22-23/1_Questions+Test_22-23 CONCEPT.html
@@ -74,9 +74,10 @@
           <table style="width:100%; margin:0px">
             <tr> 
               <td rowspan="2" style="width:66%; vertical-align:top">
-                <p><strong>Teachers are responsible for <i>modifying the questions</i> and <i>reviewing the test settings</i> in TestVision.</strong></p>
-                <p>The ICTO team sets up a copy of last year's exam with copies of last year's questions and test settings – or if this is your first time, we'll set up concept questions and assign basic settings to the exam. Teachers are solely responsible for <i>modifying the questions</i> and <i>reviewing the test settings</i> in TestVision.</p>
-                <p>Questions can be changed by teachers until the last moment. A request for adding new questions to the test or changing test settings can be sent to ICTO up to one week before the start of the test. Teachers can also do these things themselves with the help of detailed instructions.</p>
+                <p><strong>The ICTO team sets up a copy of last year's exam with copies of last year's questions and test settings – or if this is your first time, we'll set up concept questions and assign basic settings to the exam. </strong></p>
+                <p>Teachers are responsible for <u>modifying the questions</u> and <u>reviewing the test settings</u>. Instructions on how to do these tasks can be found below. Questions can be changed by teachers until the last moment. A request for adding new questions to the test or changing test settings can be sent to ICTO up to one week before the start of the test. </strong></p>
+                
+                <p><i class="icon-info"></i> <em>Teachers can also decide to take on the task of creating <u>new questions</u>. This is not required, but instructions on how to do this can be found below 'Optional'.</em></p>
               </td>
 
               <td style="width:33%; padding-left: 45px; vertical-align:top;">
@@ -163,8 +164,10 @@
 
       <p style="text-align: left; font-size:10pt;"><a id="optionaldialog" class="Button Button--link" style="width: 90%; text-align: left; margin-left: auto; margin-right: auto;" href="#optionaldialog"><span style="color:#08a8a2; font-size:12pt"><i class="icon-question">&nbsp;</i><em> Who are these instructions intended for? </em></span></a></p>
 
-      <div id="optionaldialog" class="enhanceable_content dialog" style="font-size: 12pt; vertical-align: bottom;"><strong>[header]</strong><br />
-        [tekst]<br><br></div>
+      <div id="optionaldialog" class="enhanceable_content dialog" style="font-size: 10pt; vertical-align: bottom;"><strong>
+        Please note that teachers are generally <u>not required</u> to create new questions. The ICTO team prepares dummy questions for you based on last year's exam and ensures these questions are imported in the test. This means you are only required to modify these questions. 
+        </strong><br /><br />
+        The instructions to create new questions are only meant for those teachers who would like to take on this task themselves. Beware you’ll also need to import these questions into the test. Otherwise, students will not be able to see your newly created questions at the test.<br><br></div>
 
 
     </div>
