turnitin similarity homepage

--- a/A-Z/Tools/Turnitin Similarity/Handout_teachers.html
+++ b/A-Z/Tools/Turnitin Similarity/Handout_teachers.html
@@ -1,3 +1,22 @@
+<!-- Banner -->
+<p><img style="width: 100%;" src="https://canvas.uva.nl/courses/8175/files/8164212/preview" alt="TII banner.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/8164212" data-api-returntype="File" /></p>
+
+<!-- Back to top -->
+<p><a id="topmenu"></a></p>
+
+<!-- Menubalk -->
+<div class="grid-row">
+    <div class="col-xs-12 col-md-12">
+        <div class="styleguide-section__grid-demo-element">
+            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; text-align: center;">
+                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/homepage-turnitin-similarity" ><i class="icon-home"></i> <span><b>&nbsp;Homepage Turnitin Similarity</b></span> </a>
+                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/a-z" target="_blank" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/a-z"><span><i class="icon-copy-course"></i>&nbsp;View all topics (A-Z)</span></a>
+                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/enroll/N3HMY8" target="_blank" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/enroll/N3HMY8"><span><i class="icon-discussion-new"></i>&nbsp;Enroll in this course</span></a>
+                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/contact" target="_blank" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/contact"><i class="icon-group"></i><span>&nbsp;Contact</span></a>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!-- Tab vakjes (aanklikbare menu) -->
 <div class="enhanceable_content tabs">
