--- a/A-Z/Homepage/AZ-Homepage_22-23.html
+++ b/A-Z/Homepage/AZ-Homepage_22-23.html
@@ -249,7 +249,7 @@
 
                             <!-- Turnitin Similarity -->
                             <p>
-                                <a id="" class="Button Button--large" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="Turnitin Similarity" href="https://canvas.uva.nl/courses/169/pages/detecting-plagiarism" target="_blank" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/169/pages/detecting-plagiarism" data-api-returntype="Page">
+                                <a id="" class="Button Button--large" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="Turnitin Similarity" href="https://canvas.uva.nl/courses/8175/pages/homepage-turnitin-similarity" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/homepage-turnitin-similarity" data-api-returntype="Page">
                                     <img style="margin-right: 20px;" id="4377529" src="https://canvas.uva.nl/courses/8175/files/8014734/preview" alt="Turnitin-logo-bg.png" width="44" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/8014734" data-api-returntype="File" /><span style="color: #000000;">Turnitin Similarity</span>
                                 </a>
                             </p>                            
@@ -382,7 +382,7 @@
                                     <p><strong>&nbsp;</strong></p>
                                 </td>
                                 <td style="width: 22.3964%;">
-                                    <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/169/pages/detecting-plagiarism" target="_blank" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/169/pages/detecting-plagiarism" data-api-returntype="Page">
+                                    <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/homepage-turnitin-similarity" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/homepage-turnitin-similarity" data-api-returntype="Page">
                                         <span>View more</span>
                                     </a>
                                 </td>
