--- a/A-Z/Tools/Turnitin Similarity/TII_homepage.html
+++ b/A-Z/Tools/Turnitin Similarity/TII_homepage.html
@@ -29,7 +29,7 @@
                <a href="https://canvas.uva.nl/courses/8175/pages/turnitin-similarity-hand-out-for-teachers"><img style="width: 13%; margin-right:50px; float:left" src="https://canvas.uva.nl/courses/8175/files/8165463/preview" alt="licht.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/8165463" data-api-returntype="File" /></a>
                     
                         <h4>Suspected plagiarism?</h4>
-                        Wondering about what procedure to follow if you suspect a student of plagiarism? This <a href="https://canvas.uva.nl/courses/8175/pages/turnitin-similarity-hand-out-for-teachers">hand-out for teachers</a> will show you how you can view a plagiarism report and how to report suspected plagiarism to the examinations board.
+                        Wondering about what procedure to follow if you suspect a student of plagiarism? This <a href="https://canvas.uva.nl/courses/8175/pages/turnitin-similarity-hand-out-for-teachers">hand-out for teachers</a> will show you how you can view a plagiarism report and how to report suspected plagiarism to the Examinations Boards.
                    
             </div>
         </td>
