--- a/A-Z/Tools/Atlas-ti.html
+++ b/A-Z/Tools/Atlas-ti.html
@@ -1,3 +1,4 @@
+<img src="/courses/8175/files/8179079/preview" alt="202123-banners (2).png" />
 <div class="grid-row">
     <div class="col-xs-12 col-md-20">
         <div class="styleguide-section__grid-demo-element">
@@ -10,7 +11,7 @@
 </div>
 <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px;">
     <p><strong>How to get a license code?</strong></p>
-    <p><em>Starting this academic year (21/22), students and teachers need to request the license code in a different way.</em></p>
+    <p><em>Students and teachers need to request the license code in a different way.</em></p>
     <p><span style="color: #ba372a;"><strong>Students </strong></span>&nbsp; &nbsp; &nbsp; <a href="https://canvas.uva.nl/courses/28129/pages/atlas-dot-ti" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/28129/pages/atlas-dot-ti" data-api-returntype="Page"><strong>Share this page with students</strong></a></p>
     <p><strong><span style="color: #ba372a;">Teachers</span>&nbsp; &nbsp; </strong>&nbsp; &nbsp;Teachers need to send a request to the <em>secretary</em> of their department (ICT contactpersoon)</p>
 </div>
