--- a/CCSi/Homepage_BUILDINGBLOCKS.html
+++ b/CCSi/Homepage_BUILDINGBLOCKS.html
@@ -21,17 +21,21 @@
     </ul>
 
     <div id="About" style="background-color: #ffffff; height: auto; padding-left: 30px; padding-top: 30px; padding-bottom: 50px;">
-        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #8fa674; title="" href="https://canvas.uva.nl/courses/36696/pages/semester-2-welcome-monday-feb-6?module_item_id=1562512">
+        <!--<a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #8fa674; title="" href="https://canvas.uva.nl/courses/36696/pages/semester-2-welcome-monday-feb-6?module_item_id=1562512">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Semester 2</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>Welcome to the new semester!</em></span>
+        </a>-->
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #8fa674; title="" href="https://amsuni-my.sharepoint.com/:b:/g/personal/t_blomvliet_uva_nl/ESH44nGjN19IgQhzB27qfRABc8HUvIipkJ7fSkYQxjNqPg">
+            <h5><span style="font-size: 14pt; color: #1e1e1e;">Course manual</span></h5>
+            <span style="font-size: 10pt; color: #124240;"><em>Course Manual Semester 2 Building Blocks 2022-2023</em></span>
+        </a>
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #8fa674; title="" href="https://amsuni-my.sharepoint.com/:w:/g/personal/t_blomvliet_uva_nl/EYRAlrM1K4RLvKS3nHBhiSIBXe3EkfPKEcBRiLX4oVoplQ?e=A8voxT">
+            <h5><span style="font-size: 14pt; color: #1e1e1e;">Assignment deadlines</span></h5>
+            <span style="font-size: 10pt; color: #124240;"><em>Check out this document for an overview of all deadlines</em></span>
         </a>
         <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #8fa674; title="" href="https://rooster.uva.nl/schedule">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Weekly schedule</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>You can view your weekly schedule via rooster.uva.nl. if you have downloaded or printed this information, please be aware that times, dates and locations may be subject to change and you should regularly check your online timetable.</em></span>
-        </a>
-        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #8fa674; title="">
-            <h5><span style="font-size: 14pt; color: #1e1e1e;">Course manual</span></h5>
-            <span style="font-size: 10pt; color: #124240;"><em>Coming soon...</em></span>
         </a>
         <!--<a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #8fa674; title="">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">APA Reference Style</span></h5>
