scriptieworkflow a-z pagina geupdatet

--- a/A-Z/Homepage/AZ-Homepage_22-23.html
+++ b/A-Z/Homepage/AZ-Homepage_22-23.html
@@ -1957,130 +1957,21 @@
                                                 <span style="color: #ffffff;"><strong>Teachers</strong></span>
                                             </li>
                                         </ul>
-                                        <ul class="pill" style="background: #f26d07; margin-top: 20px; margin-right: 8px;">
-                                            <li>
-                                                <span style="color: #ffffff;"><strong>Read this first</strong></span>
-                                            </li>
-                                        </ul>
                                         <ul class="pill" style="background: #858585; margin-top: 20px; margin-right: 8px;">
                                             <li>
-                                                <span style="color: #ffffff;"><strong>Overview</strong></span>
+                                                <span style="color: #ffffff;"><strong>Thesis submission</strong></span>
                                             </li>
                                         </ul>
                                     </div>
                                     <p>
-                                        <span style="color: #5a5a5a;">We kindly ask you to first read this page: this information will provide a basic overview of the thesis workflow and the do's and don'ts.</span>
+                                        <span style="color: #5a5a5a;">This page will provide a basic overview of the thesis workflow and the do's and don'ts.</span>
                                     </p>
                                 </td>
                                 <td style="width: 4.47733%;">
                                     <p><strong>&nbsp;</strong></p>
                                 </td>
                                 <td style="width: 22.3964%;">
-                                    <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/uva-thesis-workflow-information-read-this-first" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/uva-thesis-workflow-information-read-this-first">
-                                        <span>View more</span>
-                                    </a>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #e9ebed; padding: 15px;">
-                    <table style="border-collapse: collapse; width: 100.812%;" border="0">
-                        <tbody>
-                            <tr>
-                                <td style="width: 19.3883%;">
-                                    <p style="text-align: center;">
-                                        <span style="color: #3598db; font-size: 17pt;">
-                                            <span style="color: #3598db;"> <strong>
-                                                    <span style="color: #000000;">Communication</span>
-                                                </strong> </span>
-                                        </span>
-                                    </p>
-                                    <p>&nbsp;</p>
-                                </td>
-                                <td style="width: 4.404%;">
-                                    <p><strong>&nbsp;</strong></p>
-                                </td>
-                                <td style="width: 56.2347%;">
-                                    <div class="styleguide-section__grid-demo-element">
-                                        <img id="4377529" style="margin-right: 8px; margin-bottom: 7px;" src="https://canvas.uva.nl/courses/8175/files/4377529/preview" alt="canvas-logo-1024x1020-1.png" width="28" height="28" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4377529" data-api-returntype="File" />
-                                        <ul class="pill" style="background: #3598db; margin-top: 20px; margin-right: 8px;">
-                                            <li>
-                                                <span style="color: #ffffff;"><strong>Students</strong></span>
-                                            </li>
-                                        </ul>
-                                        <ul class="pill" style="background: #858585; margin-top: 20px; margin-right: 8px;">
-                                            <li>
-                                                <span style="color: #ffffff;"><strong>Instructions</strong></span>
-                                            </li>
-                                        </ul>
-                                        <ul class="pill" style="background: #858585; margin-top: 20px; margin-right: 8px;">
-                                            <li>
-                                                <span style="color: #ffffff;"><strong>#TODO</strong></span>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <p>
-                                        <span style="color: #5a5a5a;">You can copy+paste this information to send out to students.</span>
-                                    </p>
-                                </td>
-                                <td style="width: 4.47733%;">
-                                    <p><strong>&nbsp;</strong></p>
-                                </td>
-                                <td style="width: 22.3964%;">
-                                    <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/uva-thesis-workflow-for-students" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/uva-thesis-workflow-for-students">
-                                        <span>View more</span>
-                                    </a>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #e9ebed; padding: 15px;">
-                    <table style="border-collapse: collapse; width: 100.812%;" border="0">
-                        <tbody>
-                            <tr>
-                                <td style="width: 19.3883%;">
-                                    <p style="text-align: center;">
-                                        <span style="color: #3598db; font-size: 17pt;">
-                                            <span style="color: #3598db;"> <strong>
-                                                    <span style="color: #000000;">OWAS / PGM</span>
-                                                </strong> </span>
-                                        </span>
-                                    </p>
-                                    <p>&nbsp;</p>
-                                </td>
-                                <td style="width: 4.404%;">
-                                    <p><strong>&nbsp;</strong></p>
-                                </td>
-                                <td style="width: 56.2347%;">
-                                    <div class="styleguide-section__grid-demo-element">
-                                        <img id="4377529" style="margin-right: 8px; margin-bottom: 7px;" src="https://canvas.uva.nl/courses/8175/files/4377529/preview" alt="canvas-logo-1024x1020-1.png" width="28" height="28" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4377529" data-api-returntype="File" />
-                                        <ul class="pill" style="background: #3598db; margin-top: 20px; margin-right: 8px;">
-                                            <li>
-                                                <span style="color: #ffffff;"><strong>Administration Office</strong></span>
-                                            </li>
-                                        </ul>
-                                        <ul class="pill" style="background: #3598db; margin-top: 20px; margin-right: 8px;">
-                                            <li>
-                                                <span style="color: #ffffff;"><strong>Programme managers</strong></span>
-                                            </li>
-                                        </ul>
-                                        <ul class="pill" style="background: #858585; margin-top: 20px; margin-right: 8px;">
-                                            <li>
-                                                <span style="color: #ffffff;"><strong>Support</strong></span>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <p>
-                                        <span style="color: #5a5a5a;">This page lists all the courses that contain the thesis workflow.</span>
-                                    </p>
-                                </td>
-                                <td style="width: 4.47733%;">
-                                    <p><strong>&nbsp;</strong></p>
-                                </td>
-                                <td style="width: 22.3964%;">
-                                    <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/scriptie-workflow-gsss-20-slash-21" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/scriptie-workflow-gsss-20-slash-21">
+                                    <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/thesis-workflow-information-for-teachers" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/uva-thesis-workflow-information-read-this-first">
                                         <span>View more</span>
                                     </a>
                                 </td>
