--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -429,7 +429,7 @@
         </table>
     </div>
 </div>
-<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;"><a class="btn Button" style="margin: 3px;" href="#topmenu"> <i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button--primary" style="margin: 3px; background-color: #08a8a2; border-color: #c7cdd1;" href="#PLACEHOLDER"> <i class="icon-forward"></i> <span>&nbsp;Next: PLACEHOLDER</span> </a></div>
+<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;"><a class="btn Button" style="margin: 3px;" href="#topmenu"> <i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button--primary" style="margin: 3px; background-color: #08a8a2; border-color: #c7cdd1;" href="#FAQ_A2"> <i class="icon-forward"></i> <span>&nbsp;Next: Mark questions as correct for everyone</span> </a></div>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
