laatste kleine wijziging, waarschuwing dat >100 studenten nodig zijn voor betrouwbare analyse

--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -326,8 +326,11 @@
                 <tr style="height: auto;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">&nbsp;</span> </strong></td>
                     <td style="width: 90%; border-style: hidden; height: auto;">
+                        <p><div class="alert alert-info"> 
+                            <a class="icon-info"></a><strong> Note:</strong> You can only analyse the results once they have been <a href="#FAQ_G2">validated</a>.
+                        </div><br></p>
                         <p><div class="alert"> 
-                            <a class="icon-warning"></a><strong> Note:</strong> You can only analyse the results once they have been <a href="#FAQ_G2">validated</a>.
+                            <a class="icon-warning"></a><strong> Warning:</strong> A reliable analysis requires at least 100 exam results.
                         </div><br></p>
                     </td>
                 </tr>
@@ -365,7 +368,7 @@
                 </tr>
                 <tr style="height: 45px; padding-bottom: 8px;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>4.</strong></span></td>
-                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> The <u>Test Analysis</u> tab shows a general analysis of the test.</span></strong></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> The <u>Test Analysis</u> tab shows a general analysis of the exam.</span></strong></td>
                 </tr>
                 <tr>
                     <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
